gcc/testsuite/gcc.dg/unclosed-init.c
int unclosed[] = { /* { dg-message "18: to match this '.'" } */
/* { dg-require-effective-target gcc_frontend } */
  42
 /* { dg-error "-: expected '.' at end of input" } */
